| Bug #43226 | Unique index build can fail with internal error after internal retry | ||
|---|---|---|---|
| Submitted: | 26 Feb 2009 13:42 | Modified: | 3 Mar 2009 17:30 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[26 Feb 2009 13:42]
Jonas Oreland
[26 Feb 2009 13:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/67682 2862 Jonas Oreland 2009-02-26 ndb - bug#43226 - fix incorrectly handled keylen (after retry) in unique index build
[26 Feb 2009 13:57]
Jonas Oreland
Extra comment: For 6.4 the same code is used for online table reorg. I.e this could also spuriously fail with internal error if table had variable size columns
[27 Feb 2009 13:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/67850 2862 Jonas Oreland 2009-02-27 ndb - bug#43226 - fix incorrectly handled keylen (after retry) in unique index build
[27 Feb 2009 16:37]
Bugs System
Pushed into 5.1.32-ndb-6.3.24 (revid:jonas@mysql.com-20090227155029-27t86x9sunysat6n) (version source revid:jonas@mysql.com-20090227153033-gn2jtooivb7bvrbq) (merge vers: 5.1.32-ndb-6.3.24) (pib:6)
[27 Feb 2009 16:37]
Bugs System
Pushed into 5.1.32-ndb-6.2.18 (revid:jonas@mysql.com-20090227154453-ta3usj3pb1t4wi5a) (version source revid:jonas@mysql.com-20090227131849-tarxeje00xrxdi1o) (merge vers: 5.1.32-ndb-6.2.17) (pib:6)
[27 Feb 2009 16:43]
Bugs System
Pushed into 5.1.32-ndb-6.4.4 (revid:jonas@mysql.com-20090227164102-a3jx1dnjf53p3g6w) (version source revid:jonas@mysql.com-20090227162103-canoifzzldvsjuho) (merge vers: 5.1.32-ndb-6.4.4) (pib:6)
[2 Mar 2009 9:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/67957 2900 Jonas Oreland 2009-03-02 ndb - bug#43226 - extra cleanup for 6.4
[2 Mar 2009 9:32]
Bugs System
Pushed into 5.1.32-ndb-6.4.4 (revid:jonas@mysql.com-20090302092826-enwn85c24s0v3x6i) (version source revid:jonas@mysql.com-20090302092826-enwn85c24s0v3x6i) (merge vers: 5.1.32-ndb-6.4.4) (pib:6)
[3 Mar 2009 17:30]
Jon Stephens
Documented in the NDB-6.2.18, 6.3.24, and 6.4. changelogs as follows:
Using indexes containing variable-sized columns could lead to
internal errors when the indexes were being built.
[NDB-6.4.4 changelog only:]
This same issue could also cause redistribution of table data
using ALTER ONLINE TABLE to fail with tables containing
variable-sized columns.
