ndb - bug#43226 - fix incorrectly handled keylen (after retry) in unique index build